; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/smbus/extr_smbus.c_smbus_attach.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/smbus/extr_smbus.c_smbus_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.smbus_softc = type { i32 }

@.str = private unnamed_addr constant [6 x i8] c"smbus\00", align 1
@MTX_DEF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @smbus_attach to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @smbus_attach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.smbus_softc*, align 8
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call %struct.smbus_softc* @device_get_softc(i32 %4)
  store %struct.smbus_softc* %5, %struct.smbus_softc** %3, align 8
  %6 = load %struct.smbus_softc*, %struct.smbus_softc** %3, align 8
  %7 = getelementptr inbounds %struct.smbus_softc, %struct.smbus_softc* %6, i32 0, i32 0
  %8 = load i32, i32* %2, align 4
  %9 = call i32 @device_get_nameunit(i32 %8)
  %10 = load i32, i32* @MTX_DEF, align 4
  %11 = call i32 @mtx_init(i32* %7, i32 %9, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32, i32* %2, align 4
  %13 = call i32 @bus_generic_probe(i32 %12)
  %14 = load i32, i32* %2, align 4
  %15 = call i32 @bus_enumerate_hinted_children(i32 %14)
  %16 = load i32, i32* %2, align 4
  %17 = call i32 @bus_generic_attach(i32 %16)
  ret i32 0
}

declare dso_local %struct.smbus_softc* @device_get_softc(i32) #1

declare dso_local i32 @mtx_init(i32*, i32, i8*, i32) #1

declare dso_local i32 @device_get_nameunit(i32) #1

declare dso_local i32 @bus_generic_probe(i32) #1

declare dso_local i32 @bus_enumerate_hinted_children(i32) #1

declare dso_local i32 @bus_generic_attach(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
